# media-tool

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  start.sh  streamlit_app.py
app/: http.py  main.py  state.py
app/components/: outline_editor.py  source_manager.py  topic_selector.py  visual_preview.py
backend/: server.py
backend/models/: source.py  structure.py  visual.py
backend/routers/: projects.py  sources.py  structure.py  topics.py  visuals.py
core/: ai_client.py  comic_generator.py  config.py  content_structurer.py  image_gen.py  infographic_generator.py  podcast_generator.py  ppt_generator.py  project_store.py  scraper.py  topic_detector.py  video_composer.py  video_generator.py  web_searcher.py  xhs_generator.py
